--- a/index.html
+++ b/index.html
@@ -542,13 +542,72 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
+      <!-- is-hidden -->
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-color-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-neme" class="input-label">Name</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="user-neme"
+                id="user-neme"
+                required
+                class="modal-input"
+              />
+              <svg class="modal-icon" widht="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tel" class="input-label">Phone</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="user-tel"
+                id="user-tel"
+                class="modal-input"
+              />
+              <svg class="modal-icon" widht="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="input-label">Email</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="user-email"
+                id="user-email"
+                class="modal-input"
+              />
+              <svg class="modal-icon" widht="18" height="24">
+                <use href="./images/icons.svg#icon-email-blacksvg"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-comment" class="input-label">Comment</label>
+            <input
+              type="text"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="modal-input"
+              required
+            />
+          </div>
+          <button type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
