--- a/index.html
+++ b/index.html
@@ -553,16 +553,16 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label for="user-neme" class="input-label">Name</label>
+            <label for="user-name" class="input-label">Name</label>
             <div class="input-wrap">
               <input
                 type="text"
-                name="user-neme"
-                id="user-neme"
+                name="user-name"
+                id="user-name"
                 required
                 class="modal-input"
               />
-              <svg class="modal-icon" widht="18" height="18">
+              <svg class="modal-icon" weight="18" height="18">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
@@ -576,7 +576,7 @@
                 id="user-tel"
                 class="modal-input"
               />
-              <svg class="modal-icon" widht="18" height="24">
+              <svg class="modal-icon" weight="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
@@ -590,7 +590,7 @@
                 id="user-email"
                 class="modal-input"
               />
-              <svg class="modal-icon" widht="18" height="24">
+              <svg class="modal-icon" weight="18" height="24">
                 <use href="./images/icons.svg#icon-email-blacksvg"></use>
               </svg>
             </div>
