--- a/index.html
+++ b/index.html
@@ -540,10 +540,32 @@
             </li>
           </ul>
         </div>
+        <div class="form-subscribe">
+          <p class="text-subscribe">Subscribe</p>
+          <form class="subscribe" autocomplete="on">
+          <label>
+            <div class="group-subscribe">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+                class="form"
+              />
+            <button type="submit" class="submit-button">Subscribe
+              <svg class="submit-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send">
+
+                </use>
+              </svg>
+            </button>
+          </label>
+        </div>
+      </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
-      <!-- is-hidden -->
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-color-icon" width="8" height="8">
@@ -562,7 +584,7 @@
                 required
                 class="modal-input"
               />
-              <svg class="modal-icon" weight="18" height="18">
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
@@ -576,7 +598,7 @@
                 id="user-tel"
                 class="modal-input"
               />
-              <svg class="modal-icon" weight="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
@@ -590,23 +612,39 @@
                 id="user-email"
                 class="modal-input"
               />
-              <svg class="modal-icon" weight="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-blacksvg"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-comment">
             <label for="user-comment" class="input-label">Comment</label>
-            <input
-              type="text"
+            <textarea
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
-              class="modal-input"
-              required
-            />
+              class="modal-comment"
+            ></textarea>
           </div>
-          <button type="submit">Send</button>
+          <div class="modal-field-check">
+            <input
+              type="checkbox"
+              id="privacy"
+              name="privacy"
+              value="true"
+              class="model-check about-title"
+            />
+            <label for="privacy" class="check-text"
+              ><span>
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;
+              <a href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-button">Send</button>
         </form>
       </div>
     </div>
