--- a/index.html
+++ b/index.html
@@ -543,25 +543,24 @@
         <div class="form-subscribe">
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe" autocomplete="on">
-          <label>
             <div class="group-subscribe">
+              <label for="email-input"></label>
               <input
                 type="email"
+                id="email-input"
                 name="email"
                 placeholder="E-mail"
                 required
                 class="form"
               />
-            <button type="submit" class="submit-button">Subscribe
-              <svg class="submit-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send">
-
-                </use>
-              </svg>
-            </button>
-          </label>
-        </div>
-      </form>
+              <button class="submit-button" type="submit">
+                Subscribe
+                <svg class="submit-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
