--- a/portfolio.html
+++ b/portfolio.html
@@ -350,6 +350,28 @@
             </li>
           </ul>
         </div>
+        <div class="form-subscribe">
+          <p class="text-subscribe">Subscribe</p>
+          <form class="subscribe" autocomplete="on">
+            <div class="group-subscribe">
+              <label for="email-input"></label>
+              <input
+                type="email"
+                id="email-input"
+                name="email"
+                placeholder="E-mail"
+                required
+                class="form"
+              />
+              <button class="submit-button" type="submit">
+                Subscribe
+                <svg class="submit-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
