--- a/portfolio.html
+++ b/portfolio.html
@@ -354,15 +354,15 @@
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe" autocomplete="on">
             <div class="group-subscribe">
-              <label for="email-input"></label>
-              <input
-                type="email"
-                id="email-input"
-                name="email"
-                placeholder="E-mail"
-                required
-                class="form"
-              />
+              <label for="email-input">
+                <input
+                  type="email"
+                  id="email-input"
+                  name="email"
+                  placeholder="E-mail"
+                  required
+                  class="form"
+              /></label>
               <button class="submit-button" type="submit">
                 Subscribe
                 <svg class="submit-icon" width="24" height="24">
