--- a/index.html
+++ b/index.html
@@ -543,23 +543,23 @@
         <div class="form-subscribe">
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe" autocomplete="on">
-            <div class="group-subscribe">
-              <label for="email-input">
-                <input
-                  type="email"
-                  id="email-input"
-                  name="email"
-                  placeholder="E-mail"
-                  required
-                  class="form"
-              /></label>
-              <button class="submit-button" type="submit">
-                Subscribe
-                <svg class="submit-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <!-- <div class="group-subscribe"> -->
+            <label for="email-input">
+              <input
+                type="email"
+                id="email-input"
+                name="email"
+                placeholder="E-mail"
+                required
+                class="form"
+            /></label>
+            <button class="submit-button" type="submit">
+              Subscribe
+              <svg class="submit-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+            <!-- </div> -->
           </form>
         </div>
       </div>
