--- a/index.html
+++ b/index.html
@@ -543,8 +543,7 @@
         <div class="form-subscribe">
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe" autocomplete="on">
-            <!-- <div class="group-subscribe"> -->
-            <label for="email-input">
+            <label class="form-list" for="email-input">
               <input
                 type="email"
                 id="email-input"
@@ -559,7 +558,6 @@
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-            <!-- </div> -->
           </form>
         </div>
       </div>
@@ -583,7 +581,7 @@
                 required
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
@@ -628,19 +626,19 @@
           <div class="modal-field-check">
             <input
               type="checkbox"
-              id="privacy"
-              name="privacy"
+              id="user-privacy"
+              name="user-privacy"
               value="true"
-              class="model-check about-title"
+              class="model-check visually-hidden"
             />
-            <label for="privacy" class="check-text"
-              ><span>
+            <label for="user-privacy" class="check-text"
+              ><span class="span">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a href="#">Privacy Policy</a>
+              <a class="policy" href="#">Privacy Policy</a>
             </label>
           </div>
           <button type="submit" class="modal-button">Send</button>
