--- a/portfolio.html
+++ b/portfolio.html
@@ -353,8 +353,7 @@
         <div class="form-subscribe">
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe" autocomplete="on">
-            <!-- <div class="group-subscribe"> -->
-            <label for="email-input">
+            <label class="form-list" for="email-input">
               <input
                 type="email"
                 id="email-input"
@@ -369,7 +368,6 @@
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-            <!-- </div> -->
           </form>
         </div>
       </div>
